--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
 	<div class="wrapper">
-		<h1>Git практика</h1>
+		<h1>Git практика </h1>
+		<h2>Создал коммит zaza0</h2>
 	</div>
 </body>
 
