--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<h1>Git практика </h1>
 		<h2>Создал коммит zaza0</h2>
 		<h2>новые изменения</h2>
+		<h2>Ышшо новые изменения</h2>
+
 	</div>
 </body>
 
