Add section with x3 paragraphs to main page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 	<div class="wrapper">
 		<h1>Git практика </h1>
 		<h2>Создал коммит zaza0</h2>
+		<section>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, dolorem?</p>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, dolorem?</p>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, dolorem?</p>
+		</section>
 	</div>
 </body>
 
