new text about stash

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h2>Создал коммит zaza0</h2>
 		<h2>новые изменения</h2>
 		<h2>Ышшо новые изменения</h2>
-
+		<h2>stash in green-red</h2>
 	</div>
 </body>
 
