--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, dolorem?</p>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, dolorem?</p>
 		</section>
+		<section>
+			<p>stash</p>
+		</section>
 	</div>
 </body>
 
